# iqbts

./: Pipfile  README.md  create_active_options_table.py  create_binance_tables.py  create_tables.py  example_insert.py  find_open_markets.py  pyproject.toml  quick_start_binance.py  quick_start_bot.py  requirements.txt  run_bot.py  run_prod.py  test_db.py  verify_tables.py
config/: settings.yaml
docs/: BINANCE_BOT.md  BINANCE_SETUP.md  DATABASE_SETUP.md  FAQ.md  TRADING_BOT.md  index.md
iqbts/: _login.py  hello.py  login.py  main.py
src/servicios/: api.py  binance_api_endpoints.py  binance_bot_service.py  binance_client.py  binance_strategies.py  database.py  iqoption_auth.py  models.py  trading_bot_service.py  trading_strategies.py
tests/: test_api_login.py  test_hello.py
