[project]
name = "iqbts"
version = "0.1.0"
description = "IA bot for IQOptions"
authors = [
    {name = "hbarbetti.ing@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
